Add content to index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-This is the index.html of the new branch
-Here I will post my insights / learnings of the Interactive Playground
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My Cheat Sheet</title>
+  </head>
+  <body>
+    <h1>Visual Studio Code</h1>
+    <h2>Key Bindings</h2>
+    <h3>Keyboard shortcuts</h3>
+    <p> Keyboard shortcuts can be edited in Keyboard Shortcuts editor        
+    </p>
+    <details><summary>All Keyboard Shortcuts</summary>
+    <ul>
+        <li>Add Cursor Above (Strg, Alt, Up)</li>
+        <li>Add Curso Below (Strg, Alt, Down)</li>
+        <li>Add Cursor to Line Ends (Shift, Alt, I)</li>
+        <li>Go Back (Alt, left)</li>
+        <li>Go Foreward (Alt, right)</li>
+         
+    </ul>
+    </details>
+   
+  </body>
+</html>
